2005-09-05  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX::STREAM-LOCK) [!WIN32_NATIVE]:
	SHARED defaults to NIL

2005-09-05  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/configure.in: bail out when X is not found

2005-09-04  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/configure.in: added AC_CHECK_SIZEOF(off_t)
	* modules/syscalls/calls.c (I_to_offset): define
	(STREAM-LOCK): use it

2005-06-06  Bruno Haible  <bruno@clisp.org>

	* makemake.in (MODULES): Don't use with_module_* variables any more.

2005-09-01  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (set_sock_opt_many): new function
	(SET-SOCKET-OPTION): use it; also use endp() and
	fehler_plist_odd() to report argument errors

2005-09-01  Sam Steingold  <sds@gnu.org>

	capture failed test output into the log file
	* tests/tests.lisp (*eval-out*, *eval-err*): new variables
	(my-eval): reset their streams before evaluating the form
	(do-test, do-errcheck): write them to log on test failure
	(run-test): bind *EVAL-OUT* and *EVAL-ERR* to string streams
	and *ERROR-OUTPUT* and  *STANDARD-OUTPUT* to broadcast streams

2005-09-01  Sam Steingold  <sds@gnu.org>

	* error.d (fehler_plist_odd): moved here from symbol.d,
	do not accept caller argument, use subr_self instead
	* symbol.d (fehler_plist_odd): moved to error.d
	(GETF, PUTF, REMF, GET-PROPERTIES): updated calls to fehler_plist_odd()
	* lispbibl.d (fehler_plist_odd): added the prototype

2005-08-30  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-1, print-tables-2):
	name all types (even those used just once) to avoid the GCC 4 warning
	"non-local variable '<anonymous struct> ...' uses anonymous type"
	(modprep): use "~&" to avoid an extra blank line
	* modules.d (MODULE): avoid the GCC 4 warning
	"non-local variable '<anonymous struct> ...' uses anonymous type"

2005-08-30  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (HAVE_SIGNALS): pass on to clisp.h for clx/new-clx